# music-explorer

./: .gitignore  LICENSE  README.md  cli.py  cli.tcss  gui.py  main.py  pyproject.toml  requirements.txt  save.json
.github/workflows/: publish-pypi.yml
testme/: queue.json
